--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -42,19 +42,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder.cs" />
-    <Compile Include="BuildRequest.cs" />
     <Compile Include="Client.cs" />
-    <Compile Include="DllLoaderExec.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository.cs" />
-    <Compile Include="TestElement.cs" />
-    <Compile Include="TestHarness.cs" />
-    <Compile Include="TestRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Builder\Builder.csproj">
+      <Project>{9e034fed-2a22-43d7-a7fd-862e01423d4a}</Project>
+      <Name>Builder</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Repository\Repository.csproj">
+      <Project>{51ab63ff-f2ad-49f6-ac56-35f0e2a3f5b0}</Project>
+      <Name>Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestHarness\TestHarness.csproj">
+      <Project>{f1b40e59-da1a-48c9-9daf-a30233d6d0a4}</Project>
+      <Name>TestHarness</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utilities\Utilities.csproj">
+      <Project>{a6fce16b-680d-4f0b-8119-ee6ceef5e5fe}</Project>
+      <Name>Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
