--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Builder.cs" />
     <Compile Include="BuildRequest.cs" />
+    <Compile Include="LibraryBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestElement.cs" />
     <Compile Include="TestRequest.cs" />
