--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CSharpLibraryBuilder.cs" />
     <Compile Include="JavaLibraryBuilder.cs" />
     <Compile Include="LibraryBuilder.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestElement.cs" />
     <Compile Include="TestRequest.cs" />
