javac, java, jar done. Need to look at proper building of jar process

--- a/TestHarness/TestHarness.csproj
+++ b/TestHarness/TestHarness.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DllLoaderExec.cs" />
+    <Compile Include="JavaLoaderExec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestElement.cs" />
     <Compile Include="TestHarness.cs" />
