--- a/TestHarness/TestHarness.csproj
+++ b/TestHarness/TestHarness.csproj
@@ -56,6 +56,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Communicator\Communicator.csproj">
+      <Project>{f4f9b00c-3e4e-46ec-8c23-3a66e8d1ee9b}</Project>
+      <Name>Communicator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Environment\Environment.csproj">
+      <Project>{c757d880-b20e-4cb9-96fb-59bceccda5e0}</Project>
+      <Name>Environment</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utilities\Utilities.csproj">
       <Project>{a6fce16b-680d-4f0b-8119-ee6ceef5e5fe}</Project>
       <Name>Utilities</Name>
